app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app1
  template:
    metadata:
      labels:
        app: hello-app1
    spec:
      containers:
      - name: app1
        image: nginx:alpine
        ports:
        - containerPort: 80
