app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app1
spec:
  selector:
    app: hello-app1
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
